--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <div class="dropdown-content">
                             <a href="filmat.html#animuar">Animuar</a>
                             <a href="filmat.html#fantazi">Fantazi</a>
-                            <a href="filmat.html#aventure">Aventure</a>
+                            <a href="filmat.html#aventure">Aventur&euml;</a>
                             <a href="filmat.html#aksion">Aksion</a>
                             <a href="filmat.html#mister">Mister</a>
                             <a href="filmat.html#komedi">Komedi</a>
@@ -631,10 +631,16 @@
           <div class="footer-middle">
             <h2 class="footer-heading">Sh&euml;rbimet</h2>
             <ul class="footer-middle-list">
-              <li class="footer-middle-list-item"><a href="filmat.html">Filmat</a> </li>
-              <li class="footer-middle-list-item"><a href="serialet.html">Serialet</a> </li>
-              <li class="footer-middle-list-item"><a href="Qasja.html">Qasja</a> </li>
-        
+              <li class="footer-middle-list-item"><a href="filmat.html">Filmat</a></li>
+              <li class="footer-middle-list-item"><a href="serialet.html">Serialet</a></li>
+              <li class="footer-middle-list-item">
+                <a href="Qasja.html">Qasja</a>
+                
+                <ul class="nested-list">
+                  <li><a href="meteshikuarat.html">M&euml; t&euml; shikuarat</a></li>
+                  <li><a href="meterejat.html">M&euml; t&euml; rejat</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
           <div class="footer-right">
