--- a/serialet.html
+++ b/serialet.html
@@ -76,8 +76,8 @@
                     <li class="menu-list-item"><a href="index.html">Ballina</a></li>
                     <li class="menu-list-item"><a href="filmat.html">Filmat</a></li>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
-                    <li class="menu-list-item"><a href="#meteshikuarat">M&euml; t&euml; shikuarat</a></li>
-                    <li class="menu-list-item"><a href="#meterejat">M&euml; t&euml; rejat</a></li>
+                    <li class="menu-list-item"><a href="meteshikuarat.html">M&euml; t&euml; shikuarat</a></li>
+                    <li class="menu-list-item"><a href="meterejat.html">M&euml; t&euml; rejat</a></li>
                 </ul>
             </div>
         </div>
