--- a/meteshikuarat.html
+++ b/meteshikuarat.html
@@ -88,8 +88,8 @@
                     <li class="menu-list-item"><a href="index.html">Ballina</a></li>
                     <li class="menu-list-item"><a href="filmat.html">Filmat</a></li>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
-                    <li class="menu-list-item"><a href="meteshikuarat.html">Me te shikuarat</a></li>
-                    <li class="menu-list-item"><a href="#meterejat">Me te rejat</a></li>
+                    <li class="menu-list-item"><a href="meteshikuarat.html">M&euml; t&euml; shikuarat</a></li>
+                    <li class="menu-list-item"><a href="meterejat.html">M&euml; t&euml; rejat</a></li>
                 </ul>
             </div>
         </div>
@@ -99,7 +99,7 @@
         <div style="width: 100%; height: 120px; display: flex; justify-content: center; align-items: center; ">
             <div class="menu-container" style="display: flex; justify-content: center; align-items: center; background-color: rgb(162, 101, 220); color: black; padding: 20px; width: 100%;">
                 <ul class="menu-list">
-                    <p class="menu-list-item "><a  style="color: black; font-weight: bold; font-size: 20px;">Me te shikuarat</a></p>
+                    <p class="menu-list-item "><a  style="color: black; font-weight: bold; font-size: 20px;">M&euml; t&euml; shikuarat</a></p>
                 </ul>
             </div>
         </div>
@@ -108,7 +108,7 @@
          <table>
             <thead>
                 <tr>
-                    <td colspan="12">Filmat me te shikuar gjate muajve te vitit</td>
+                    <td colspan="12">Filmat m&euml; t&euml; shikuar gjat&euml; muajve t&euml; vitit</td>
                 </tr>
                 <tr>
                     <th>Janar</th>
@@ -121,7 +121,7 @@
                     <th>Gusht</th>
                     <th>Shtator</th>
                     <th>Tetor</th>
-                    <th>Nentor</th>
+                    <th>N&euml;ntor</th>
                     <th>Dhjetor</th>
                 </tr>
             </thead>
@@ -175,7 +175,7 @@
         <td style="border: #000;">
          <table style="width: 200; height: 400;"">
             <tr>
-                <td colspan="4">Filmat me të shikuar gjatë sezonit veror</td>
+                <td colspan="4">Filmat m&euml; t&euml; shikuar gjat&euml; sezonit veror</td>
             </tr>
             <tr>
             <tr>
@@ -185,11 +185,11 @@
             <tr>
                 <td>IMBD</td>
                 <td>Zhanri</td>
-                <td>Aktorët</td>
+                <td>Aktor&euml;t</td>
             </tr>
             <tr>
                 <td>6.4</td>
-                <td>Dramë, Romancë</td>
+                <td>Dram&euml;, Romanc&euml;</td>
                 <td>Aslihan Malbora <br> Ece Qesmiougly</td>
             </tr>
             <tr>
@@ -199,11 +199,11 @@
             <tr>
                 <td>IMBD</td>
                 <td>Zhanri</td>
-                <td>Aktorët</td>
+                <td>Aktor&euml;t</td>
             </tr>
             <tr>
                 <td>5.8</td>
-                <td>Dramë, Komedi</td>
+                <td>Dram&euml;, Komedi</td>
                 <td>Brian Holt <br>Peter Stormare</td>
             </tr>
             <tr>
@@ -262,7 +262,7 @@
             <tr>
                 <td>IMBD</td>
                 <td>Zhanri</td>
-                <td>Aktorët</td>
+                <td>Aktor&euml;t</td>
             </tr>
             <tr>
                 <td>7.0</td>
