--- a/meteshikuarat.html
+++ b/meteshikuarat.html
@@ -94,16 +94,10 @@
             </div>
         </div>
     </div>
-
-    <div>
-        <div style="width: 100%; height: 120px; display: flex; justify-content: center; align-items: center; ">
-            <div class="menu-container" style="display: flex; justify-content: center; align-items: center; background-color: rgb(162, 101, 220); color: black; padding: 20px; width: 100%;">
-                <ul class="menu-list">
-                    <p class="menu-list-item "><a  style="color: black; font-weight: bold; font-size: 20px;">M&euml; t&euml; shikuarat</a></p>
-                </ul>
-            </div>
-        </div>
-    </div>
+    <svg width="1450px" height="30px">
+        <rect x="20" y="20" width="1350px" height="30px" fill="rgb(162, 101, 220)"/>
+    </svg>
+    <br><br><br>
     <br><br>
          <table>
             <thead>
