added some features

--- a/filmat.html
+++ b/filmat.html
@@ -41,6 +41,10 @@
             </div>
         </div>
     </div>
+    <audio controls autoplay>
+        <source src="audio/audio.mp3" type="audio/mp3">
+        
+    </audio>
     <div class="container" style="margin: 0 auto;">
         <div class="content-container" >
             <div class="movie-list-container">
@@ -153,13 +157,13 @@
                     <div class="movie-list" style="display: flex; justify-content: center; align-items: center; ">
                 <h1 class="movie-list-title" id="fantazi" style="transform: rotate(-90deg); align-self:center;">Fantazi</h1>
                 <div class="card">
-                    <img src="img/a7.cHJkLWVtcy1hc3NldHMvbW92aWVzL2IyNTlhNWZkLTNkYzQtNDcxMy1iZWJhLWE0MWFmOTcwYzAyYS5qcGc=" >
+                    <img src="img/hacker.jpg" >
                     <div class="details">
-                        <h3>Monsterhigh</h3>
+                        <h3>Hacker</h3>
                         <p>HD | 2022</p>
                         <p>Fantazi</p>
-                        <p>Vler&euml;simi: 5.1 </p>
-                        <a href="https://youtu.be/i5i76ZX8F9Q" target="_blank"> <i class="fas fa-play play-icon"></i></a>
+                        <p>Vler&euml;simi: 6.1 </p>
+                        <a href="filmihacker.html" target="_blank"> <i class="fas fa-play play-icon"></i></a>
                     </div>
                 </div>
                 <div class="card">
