added new features

--- a/Bridgerton.html
+++ b/Bridgerton.html
@@ -31,7 +31,8 @@
   </style>
 </head>
 <body>
-
+  <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+  <script src="data.js"></script>
   <div class="container">
     <header>
       <h1>Bridgerton</h1>
