--- a/Regjistrimi.html
+++ b/Regjistrimi.html
@@ -196,6 +196,8 @@
 </head>
 
 <body>
+    <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+    <script src="data.js"></script>
     <audio controls autoplay>
         <source src="audio/audio.mp3" type="audio/mp3">
         
