--- a/emilyinparis.html
+++ b/emilyinparis.html
@@ -172,6 +172,8 @@
 
     </head>
     <body>
+        <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+    <script src="data.js"></script>
         <div id="2">
             <div class="basicLayout" lang="en-AL" dir="ltr">
                 <div class="css"></div>
