--- a/filmat.html
+++ b/filmat.html
@@ -10,6 +10,8 @@
     
 </head>
 <body>
+    <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+    <script src="data.js"></script>
     <div class="navbar">
         <div class="navbar-container" >
             <div class="logo-container">
@@ -160,7 +162,7 @@
                     <img src="img/hacker.jpg" >
                     <div class="details">
                         <h3>Hacker</h3>
-                        <p>HD | 2022</p>
+                        <p>HD | 2016</p>
                         <p>Fantazi</p>
                         <p>Vler&euml;simi: 6.1 </p>
                         <a href="filmihacker.html" target="_blank"> <i class="fas fa-play play-icon"></i></a>
