--- a/filmihacker.html
+++ b/filmihacker.html
@@ -46,6 +46,8 @@
     </style>
 </head>
 <body>
+    <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+    <script src="data.js"></script>
     <div style="display: flex; justify-content: space-between; align-items: center; height: 100vh; padding: 30px;">
     <div class="card">
         <img src="img/hacker.jpg" >
