--- a/Kontakti.html
+++ b/Kontakti.html
@@ -42,6 +42,8 @@
   </script>
 </head>
 <body>
+  <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+    <script src="data.js"></script>
   <div class="navbar">
     <div class="navbar-container">
         <div class="logo-container">
