--- a/SquidGame.html
+++ b/SquidGame.html
@@ -40,7 +40,8 @@
   </style>
 </head>
 <body>
-
+  <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+  <script src="data.js"></script>
   <div class="container">
     <header>
       <h1>Squid Game</h1>
