--- a/hacker.html
+++ b/hacker.html
@@ -32,7 +32,8 @@
 </head>
 <body>
     
-
+  <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+  <script src="data.js"></script>
   <div class="container">
     <header>
       <h1>Hacker</h1>
