--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
     <title>MovieSite</title>
 </head>
 <body>
+    <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+    <script src="data.js"></script>
+    
+    <label for="movie">Choose a movie:</label>
+      <input type="text" id="movie" name="movie" list="movies" placeholder="Search..."
+      style="width: 10%; margin-bottom: 10px; padding: 8px; box-sizing: border-box;float: right;">
+  
+      <datalist id="movies">
+        <option value="Spider-man">
+        <option value="Leo">
+        <option value="Barbie">
+        <option value="Hacker">
+        <option value="The Matrix">
+      </datalist>
+  
+      <output id="recommendation" name="recommendation"></output>
+    </form>
+  
+    <script>
+      function updateRecommendation() {
+        var genre = document.getElementById("genre").value;
+        var movie = document.getElementById("movie").value;
+        var recommendation = document.getElementById("recommendation");
+  
+        recommendation.textContent = "You might enjoy a " + genre + " movie like '" + movie + "'.";
+      }
+    </script>
     <div class="navbar">
         <div class="navbar-container">
             <div class="logo-container">
