--- a/meteshikuarat.html
+++ b/meteshikuarat.html
@@ -78,6 +78,8 @@
     </style>
 </head>
 <body>
+    <div id="dateTime" style="font-size: 18px; font-family: Arial, sans-serif;color: white;"></div>
+    <script src="data.js"></script>
     <div class="navbar">
         <div class="navbar-container" >
             <div class="logo-container">
