--- a/serialet.html
+++ b/serialet.html
@@ -76,7 +76,17 @@
             <div class="menu-container">
                 <ul class="menu-list">
                     <li class="menu-list-item"><a href="index.html">Ballina</a></li>
-                    <li class="menu-list-item"><a href="filmat.html">Filmat</a></li>
+                    <li class="dropdown" id="filmat-dropdown">
+                        <div class="menu-list-item" id="filmat-link">Filmat</div>
+                        <div class="dropdown-content">
+                            <a href="filmat.html#animuar">Animuar</a>
+                            <a href="filmat.html#fantazi">Fantazi</a>
+                            <a href="filmat.html#aventure">Aventur&euml;</a>
+                            <a href="filmat.html#aksion">Aksion</a>
+                            <a href="filmat.html#mister">Mister</a>
+                            <a href="filmat.html#komedi">Komedi</a>
+                            <a href="filmat.html#sport">Sport</a>
+                        </div>
                     <li class="menu-list-item"><a href="serialet.html">Serialet</a></li>
                     <li class="menu-list-item"><a href="meteshikuarat.html">M&euml; t&euml; shikuarat</a></li>
                     <li class="menu-list-item"><a href="meterejat.html">M&euml; t&euml; rejat</a></li>
@@ -142,7 +152,7 @@
             <div class="details">
                 <h3>The Umbrella Academy</h3>
                 <p>HD | 2019</p>
-                <p>Aksion/Dram&euml;/Shkenc&euml; fantazi</p>
+                <p>Aksion/Dram&euml;/Shkenc&euml; Fantazi</p>
                 <p>Vler&euml;simi: 7.9 | 11 sezone</p>
                 <a href="Umbrella.html" target="_blank"><i class="fas fa-play play-icon"></i></a>
             </div>
@@ -159,6 +169,67 @@
             </div>
         </div>
         <div class="card">
+            <img src="img/The Crown.jpg" >
+            <div class="details">
+                <h3>The Crown</h3>
+                <p>HD | 2020</p>
+                <p>Dram&euml;/Histori</p>
+                <p>Vler&euml;simi: 8.6| 6 sezone</p>
+                <a href="https://www.youtube.com/watch?v=JWtnJjn6ng0" target="_blank"><i class="fas fa-play play-icon"></i></a>
+            </div>
+            </div>
+            <div class="card">
+                <img src="img/Game of Thrones.jpg" >
+                <div class="details">
+                    <h3>Game of Thrones</h3>
+                    <p>HD | 2011</p>
+                    <p>Dram&euml;</p>
+                    <p>Vler&euml;simi: 9.2| 6 sezone</p>
+                    <a href="https://www.youtube.com/watch?v=KPLWWIOCOOQ&t=12s" target="_blank"><i class="fas fa-play play-icon"></i></a>
+                </div>
+                </div>
+                <div class="card">
+                    <img src="img/Grey's Anatomy.jpg" >
+                    <div class="details">
+                        <h3>Grey's Anatomy</h3>
+                        <p>HD | 2005</p>
+                        <p>Dram&euml;/Romanc&euml;</p>
+                        <p>Vler&euml;simi: 7.6| 20 sezone</p>
+                        <a href="https://www.youtube.com/watch?v=GKyvMFkuCog" target="_blank"><i class="fas fa-play play-icon"></i></a>
+                    </div>
+                    </div>
+               <div class="card">
+             <img src="img/Prison Break .jpg" >
+                  <div class="details">
+                      <h3>Prison Break</h3>
+                      <p>HD | 2005</p>
+                      <p>Dram&euml;/Aksion</p>
+                      <p>Vler&euml;simi: 8.3| 5 sezone</p>
+                      <a href="https://www.youtube.com/watch?v=AL9zLctDJaU" target="_blank"><i class="fas fa-play play-icon"></i></a>
+                        </div>
+                        </div>
+                        
+             <div class="card">
+             <img src="img/The Tourist.jpg" >
+                  <div class="details">
+                      <h3>The Tourist</h3>
+                      <p>HD | 2022</p>
+                      <p>Dram&euml;/Thriller</p>
+                      <p>Vler&euml;simi: 7.0| 2 sezone</p>
+                      <a href="https://www.youtube.com/watch?v=oIjbxpFvAzs" target="_blank"><i class="fas fa-play play-icon"></i></a>
+                        </div>
+                        </div>
+             <div class="card">
+             <img src="img/Pll.jpg" >
+                  <div class="details">
+                      <h3>Pretty Little Liars</h3>
+                      <p>HD | 2010</p>
+                      <p>Dram&euml;/Mister</p>
+                      <p>Vler&euml;simi: 7.4| 7 sezone</p>
+                      <a href="https://www.youtube.com/watch?v=nwHvFNQG5UE" target="_blank"><i class="fas fa-play play-icon"></i></a>
+                        </div>
+                        </div>
+            <div class="card">
             <img src="img/s1.jpg" >
             <div class="details">
                 <h3>The Witcher</h3>
