--- a/filmat.html
+++ b/filmat.html
@@ -234,7 +234,7 @@
                         <p>HD | 2020</p>
                         <p>Aventur&euml;</p>
                         <p>Vler&euml;simi: 5.1 </p>
-                        <a href="https://youtu.be/nnM53O5D0Ng" target="_blank"></a> <i class="fas fa-play play-icon"></i>
+                        <a href="https://youtu.be/3F_feNb4oYQ" target="_blank"> <i class="fas fa-play play-icon"></i></a>
                     </div>
                 </div>
                 <div class="card">
