--- a/Regjistrimi.html
+++ b/Regjistrimi.html
@@ -214,6 +214,16 @@
                     <label for="email">Email</label>
                     <input type="email" id="email" placeholder="Shkruani email" required>
                 </div>
+                <div style="color:white">
+                    <label for="gender">Gjinia:</label>
+                <label class="radio-inline">
+                    <input type="radio" name="gender" checked>Mashkull
+                  </label>
+                  <label class="radio-inline">
+                    <input type="radio" name="gender">Fem&euml;r
+                  </label>
+                </div>
+                <br/>
                 <div style="display: flex; justify-content: space-between; align-items: center;">
                 <div class="form-control">
                     <label for="password">Fjal&euml;kalimi</label>
