--- a/meteshikuarat.html
+++ b/meteshikuarat.html
@@ -99,7 +99,7 @@
     </svg>
     <br><br><br>
     <br><br>
-         <table>
+         <table cellpadding="5" cellspacing="0">
             <thead>
                 <tr>
                     <td colspan="12">Filmat m&euml; t&euml; shikuar gjat&euml; muajve t&euml; vitit</td>
@@ -167,7 +167,7 @@
         <br><br><br><br>
         <table style="border: #000;">
         <td style="border: #000;">
-         <table style="width: 200; height: 400;"">
+         <table style="width: 200; height: 400;"cellpadding="5" cellspacing="0">
             <tr>
                 <td colspan="4">Filmat m&euml; t&euml; shikuar gjat&euml; sezonit veror</td>
             </tr>
