--- a/Kontakti.html
+++ b/Kontakti.html
@@ -64,7 +64,10 @@
       <div class="text">
         <h1>Kontakti</h1>
         <div class="violetline"></div>
-        <p>Keni pyetje ? Ndoshta ne kemi p&euml;rgjigje</p>
+        <p id="shfaqja e tekstit"></p>
+     <script>
+    document.getElementById("shfaqja e tekstit").innerHTML = "Keni pyetje ? Ndoshta ne kemi p&euml;rgjigje";
+    </script>
       </div>
     </div>
     <div class="kontakti">
