--- a/Qasja.html
+++ b/Qasja.html
@@ -15,11 +15,11 @@
         <form action="#">
             <div class="mb-3">
                 <label for="username" class="form-label">Emri i p&euml;rdoruesit:</label>
-                <input type="text" class="form-control" id="username" style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
+                <input type="text" class="form-control" id="username" autofocus style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Fjal&euml;kalimi:</label>
-                <input type="password" class="form-control" id="password" style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
+                <input type="password" class="form-control" id="password" autocomplete="current-password" style="background-color: rgba(255, 255, 255, 0.1); border-color: rgba(255, 255, 255, 0.2);">
             </div>
             <div class="mb-3 form-check">
                 <input type="checkbox" class="form-check-input" id="remember">
