--- a/Regjistrimi.html
+++ b/Regjistrimi.html
@@ -208,11 +208,15 @@
                 </svg>
                 <div class="form-control">
                     <label for="username">Emri i p&euml;rdoruesit</label>
-                    <input type="text" id="username" placeholder="Shkruani emrin e p&euml;rdoruesit" required>
+                    <input type="text" id="username" placeholder="Shkruani emrin e p&euml;rdoruesit" max="20" required>
                 </div>
                 <div class="form-control">
                     <label for="email">Email</label>
                     <input type="email" id="email" placeholder="Shkruani email" required>
+                </div>
+                <div class="form-control">
+                    <label for="birthday">Dit&euml;lindja</label>
+                    <input type="birthday" id="birthday" placeholder="Shkruani dit&euml;lindjen" pattern="\d{2}-\d{2}-\d{4}" required>
                 </div>
                 <div style="color:white">
                     <label for="gender">Gjinia:</label>
@@ -256,6 +260,7 @@
             const email = document.getElementById('email').value.trim();
             const password = document.getElementById('password').value.trim();
             const password2 = document.getElementById('password2').value.trim();
+            const birthday = document.getElementById('birthday').value.trim();
 
             if (username.length < 3) {
                 alert("Emri i perdoruesit duhet të jetë me shume se 3 karaktere.");
@@ -278,9 +283,15 @@
                 return false;
             }
 
-            alert("Llogaria juaj eshte krijuar me sukses!");
-            return true;
+        const birthdayRegex = /^\d{2}-\d{2}-\d{4}$/;
+        if (!birthdayRegex.test(birthday)) {
+            alert("Ju lutem, vendosni datën e lindjes në formatin e saktë (DD-MM-YYYY).");
+            return false;
         }
+
+        alert("Llogaria juaj është krijuar me sukses!");
+        return true;
+    }
     </script>
     
   <div style="position: absolute; bottom: 4px; right: 4px;">
